Feature 72654936 - Inclusão de remoção de combos
